[package]
name = "simple-auth-hasura"
version = "0.1.0"
authors = ["olivier <olivier@kreako.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
argonautica = "0.2.0"
dotenv = "0.15.0"
env_logger = "0.8.3"
json = "0.12.4"
jsonwebtoken = "7.2.0"
serde = { version = "1.0.124", features = ["derive"] }
